# sovani-crosspost

./: .env.backup  .env.example  .gitignore  0006b_content_plans.sql  0007_generation_progress.sql  0008_analytics_insights.sql  COMPLETE_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_COMMANDS.md  DOCUMENTATION.md  Dockerfile  Dockerfile.worker  PRODUCTION_DEPLOY.md  QUICK_START.md  README.md  STEP_BY_STEP_DEPLOY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  openapi.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/adapters/: facebook.py  google_drive.py  instagram.py  rutube.py  storage_s3.py  telegram.py  telegram_intake.py  tiktok.py  vk.py  yandex_disk.py  youtube.py
app/api/: account.py  admin_fraud.py  analytics.py  auth.py  cart.py  checkout.py  cloud_storage.py  content_plan.py  deps.py  generation_progress.py  pricing.py  routes.py  tiktok_oauth.py  tts.py  user_routes.py  video_gen.py
config/: publishing_rules.yml
docs/: COMPLETE_DEPLOYMENT.md  DEPLOYMENT.md  DEVELOPMENT.md  PROJECT_STATUS.md  README.md  TODO.md  TOKENS_GUIDE.md
helpers/: ffmpeg_profiles.sh
migrations/: 0001_init.sql  0002_outbox_rules.sql  0003_schedules_queue.sql  0004_users_topics.sql  0005_unified_auth_cart.sql  0006_marketplace_credentials.sql
scripts/: migrate.py
tests/: __init__.py  test_caption_llm.py  test_enrichment.py  test_ffmpeg_media.py  test_instagram_adapter.py  test_preflight_rules.py  test_task_pipeline.py  test_telegram_adapter.py  test_tiktok_adapter.py  test_vk_adapter.py
(+41 files in other folders)
